[tool.poetry]
name = "myutils"
version = "0.1.0"
description = "Collection of common util functions."
authors = ["Tommy Liu <hwliu.tommy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
